--- a/.github/workflows/preview-infra.yml
+++ b/.github/workflows/preview-infra.yml
@@ -24,6 +24,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: terraform plan
-        uses: dflook/terraform-plan@v1
+        uses: dflook/tofu-plan@v1
         with:
           path: infra
