--- a/.github/workflows/preview-infra.yml
+++ b/.github/workflows/preview-infra.yml
@@ -9,9 +9,8 @@ on:
       - synchronize
       - reopened
 
-permissions:
-  contents: read
-  pull-requests: write
+env:
+  aws_region: us-west-2
 
 jobs:
   plan:
@@ -22,6 +21,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ env.aws_region }}
+          aws-access-key-id: ${{ secrets.aws_access_key_id }}
+          aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
 
       - name: terraform plan
         uses: dflook/tofu-plan@v1
