--- a/.github/workflows/preview-infra.yml
+++ b/.github/workflows/preview-infra.yml
@@ -1,8 +1,9 @@
-name: Create terraform plan
+name: Create Tofu plan
 
 on:
   pull_request:
     branches:
+      - staging
       - main
     types:
       - opened
@@ -22,6 +23,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set environment
+        id: set-env
+        run: |
+          # Get the infra directory (infra/staging or infra/main)
+          infra_dir=infra/${{ github.ref }}
+          echo "infra_dir=${infra_dir}" >> $GITHUB_OUTPUT
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -29,7 +37,7 @@ jobs:
           aws-access-key-id: ${{ secrets.aws_access_key_id }}
           aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
 
-      - name: terraform plan
+      - name: tofu plan
         uses: dflook/tofu-plan@v1
         with:
-          path: infra
+          path: ${{ steps.set-env.outputs.infra_dir }}
