multi-env infra

--- a/.github/workflows/preview-infra.yml
+++ b/.github/workflows/preview-infra.yml
@@ -27,7 +27,7 @@ jobs:
         id: set-env
         run: |
           # Get the infra directory (infra/staging or infra/main)
-          infra_dir=infra/${{ github.ref }}
+          infra_dir=infra/environments/${{ github.ref }}
           echo "infra_dir=${infra_dir}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
