--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -20,7 +20,14 @@ jobs:
         id: set-env
         run: |
           # Get the infra directory (infra/environments/staging or infra/environments/main)
-          infra_dir=infra/environments/${{ github.ref }}
+          if [ "${{ github.ref_name }}" = "main" ]; then
+            infra_dir=infra/environments/production
+          elif [ "${{ github.ref_name }}" = "staging" ]; then
+            infra_dir=infra/environments/staging
+          else
+            echo "Invalid branch: ${{ github.ref_name }}"
+            exit 1
+          fi
           echo "infra_dir=${infra_dir}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
