--- a/.github/workflows/preview-infra.yml
+++ b/.github/workflows/preview-infra.yml
@@ -27,7 +27,14 @@ jobs:
         id: set-env
         run: |
           # Get the infra directory (infra/environments/staging or infra/environments/main)
-          infra_dir=infra/environments/${{ github.event.pull_request.base.ref  }}
+          if [ "${{ github.event.pull_request.base.ref }}" = "main" ]; then
+            infra_dir=infra/environments/production
+          elif [ "${{ github.event.pull_request.base.ref }}" = "staging" ]; then
+            infra_dir=infra/environments/staging
+          else
+            echo "Invalid branch: ${{ github.event.pull_request.base.ref }}"
+            exit 1
+          fi
           echo "infra_dir=${infra_dir}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
