--- a/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
+++ b/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.secrets.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -8,10 +9,11 @@ spec:
   refreshInterval: 5m
   secretStoreRef:
     kind: SecretStore
-    name: {{ .Release.Name }}-secret-store
+    name: {{ .Values.environment }}-control-plane-cluster-secret-store
   target:
     name: {{ .Release.Name }}-posthog-project-api-key
     creationPolicy: Owner
   dataFrom:
   - extract:
       key: {{ .Values.secrets.posthog_project_api_key.key }}
+{{- end }}
