--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -1,13 +1,14 @@
 name: Deploy Infra
 
 on:
-  push:
-    branches:
-      - main
-      - staging
-
-env:
-  aws_region: us-west-2
+    workflow_call:
+        inputs:
+            environment:
+                required: true
+                type: string
+            aws_region:
+                required: true
+                type: string
 
 jobs:
   deploy:
@@ -19,21 +20,14 @@ jobs:
       - name: Set environment
         id: set-env
         run: |
-          # Get the infra directory (infra/environments/staging or infra/environments/main)
-          if [ "${{ github.ref_name }}" = "main" ]; then
-            infra_dir=infra/environments/production
-          elif [ "${{ github.ref_name }}" = "staging" ]; then
-            infra_dir=infra/environments/staging
-          else
-            echo "Invalid branch: ${{ github.ref_name }}"
-            exit 1
-          fi
+          # Get the infra directory (infra/environments/staging or infra/environments/production)
+          infra_dir=infra/environments/${{ inputs.environment }}
           echo "infra_dir=${infra_dir}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: ${{ env.aws_region }}
+          aws-region: ${{ inputs.aws_region }}
           aws-access-key-id: ${{ secrets.aws_access_key_id }}
           aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
 
