--- a/.github/workflows/deploy-posthog-reverse-proxy.yml
+++ b/.github/workflows/deploy-posthog-reverse-proxy.yml
@@ -12,6 +12,11 @@ on:
       region:
         required: true
         type: string
+    secrets:
+      aws_access_key_id:
+        required: true
+      aws_secret_access_key:
+        required: true
 
 jobs:
   deploy:
