--- a/.github/workflows/deploy-services.yml
+++ b/.github/workflows/deploy-services.yml
@@ -20,17 +20,11 @@ on:
 
 jobs:
   deploy-posthog-reverse-proxy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy posthog reverse proxy
-        uses: ./.github/workflows/deploy-posthog-reverse-proxy.yml
-        with:
-          environment: ${{ inputs.environment }}
-          cluster_name: ${{ inputs.cluster_name }}
-          region: ${{ inputs.region }}
-        secrets:
-          aws_access_key_id: ${{ secrets.aws_access_key_id }}
-          aws_secret_access_key: ${{ secrets.aws_secret_access_key }}
+    uses: ./.github/workflows/deploy-posthog-reverse-proxy.yml
+    with:
+      environment: ${{ inputs.environment }}
+      cluster_name: ${{ inputs.cluster_name }}
+      region: ${{ inputs.region }}
+    secrets:
+      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
