--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -9,6 +9,11 @@ on:
             aws_region:
                 required: true
                 type: string
+        secrets:
+            aws_access_key_id:
+                required: true
+            aws_secret_access_key:
+                required: true
 
 jobs:
   deploy:
