--- a/.github/workflows/deploy-posthog-reverse-proxy.yml
+++ b/.github/workflows/deploy-posthog-reverse-proxy.yml
@@ -30,6 +30,13 @@ jobs:
         run: |
           echo "values_file=deploy/helm/posthog-reverse-proxy/values/${{ inputs.environment }}.yaml" >> $GITHUB_OUTPUT
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: ${{ inputs.region }}
+          aws-access-key-id: ${{ secrets.aws_access_key_id }}
+          aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
+
       - name: Connect to EKS cluster
         run: |
           aws eks update-kubeconfig \
