--- a/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
+++ b/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
@@ -4,7 +4,7 @@ kind: ExternalSecret
 metadata:
   name: {{ .Release.Name }}-posthog-project-api-key
   labels:
-    {{- include "codex.labels" . | nindent 4 }}
+    {{- include "posthog-reverse-proxy.labels" . | nindent 4 }}
 spec:
   refreshInterval: 5m
   secretStoreRef:
