--- a/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
+++ b/deploy/helm/posthog-reverse-proxy/templates/secrets/posthog_project_api_key.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   refreshInterval: 5m
   secretStoreRef:
-    kind: SecretStore
+    kind: ClusterSecretStore
     name: {{ .Values.environment }}-control-plane-cluster-secret-store
   target:
     name: {{ .Release.Name }}-posthog-project-api-key
