reject requests without is cleanlab origin header

--- a/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
+++ b/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
@@ -15,6 +15,10 @@ data:
         server_name {{ .Values.domain }};
 
         location /ingest {
+          if ($http_x_is_cleanlab_origin != "true") {
+            return 403;
+          }
+
           limit_req zone=one burst=10 nodelay;
 
           rewrite ^/ingest$ /v1/ingest break;
