Fix external DNS ingress annotation

--- a/deploy/helm/billing/templates/ingress.yaml
+++ b/deploy/helm/billing/templates/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
     alb.ingress.kubernetes.io/healthcheck-path: /api/health
-    external-dns.codex.kubernetes.io/hostname: {{ .Values.domain }}
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.domain }}
 spec:
   ingressClassName: alb
   rules:
