--- a/deploy/helm/billing/templates/metronome-reverse-proxy/metronome_api_key.yaml
+++ b/deploy/helm/billing/templates/metronome-reverse-proxy/metronome_api_key.yaml
@@ -3,6 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: {{ .Release.Name }}-metronome-reverse-proxy
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "billing.labels" . | nindent 4 }}
 spec:
