--- a/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
+++ b/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
@@ -30,5 +30,9 @@ data:
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /health {
+          return 200;
+        }
       }
     }
