--- a/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
+++ b/deploy/helm/billing/templates/metronome-reverse-proxy/config_map.yaml
@@ -14,6 +14,10 @@ data:
         listen {{ .Values.metronome.service.port }};
         server_name {{ .Values.domain }};
 
+        location = /ingest/health {
+          return 200;
+        }
+
         location = /ingest {
           if ($http_x_is_cleanlab_origin != "true") {
             return 403;
@@ -29,10 +33,6 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /health {
-          return 200;
         }
       }
     }
