Get internal API keys secret

--- a/deploy/helm/billing/values/hosted/staging.yaml
+++ b/deploy/helm/billing/values/hosted/staging.yaml
@@ -17,3 +17,6 @@ secrets:
 
   metronome_api_key:
     key: "staging/control-plane/metronome-reverse-proxy/metronome_api_key"
+
+  internal_api_key:
+    prefix: "staging/control-plane/internal-api-keys"
