--- a/deploy/helm/billing/values/hosted/staging.yaml
+++ b/deploy/helm/billing/values/hosted/staging.yaml
@@ -18,5 +18,5 @@ secrets:
   metronome_api_key:
     key: "staging/control-plane/metronome-reverse-proxy/metronome_api_key"
 
-  internal_api_key:
-    prefix: "staging/control-plane/internal-api-keys"
+  internal_api_keys:
+    key: "staging/control-plane/internal-api-keys"
