--- a/deploy/helm/billing/values/local.yaml
+++ b/deploy/helm/billing/values/local.yaml
@@ -11,6 +11,15 @@ metronome:
     type: ClusterIP
     port: 80
 
+# Backend
+backend:
+  service:
+    type: ClusterIP
+    port: 80
+
+  container:
+    port: 8080
+
 # Secrets
 secrets:
   enabled: false
