--- a/deploy/helm/posthog-reverse-proxy/values/local.yaml
+++ b/deploy/helm/posthog-reverse-proxy/values/local.yaml
@@ -1,4 +1,19 @@
 environment: development
+domain: localhost
 
+# Ingress
+ingress:
+  enabled: false
+
+# Posthog
+posthog:
+  service:
+    type: ClusterIP
+    port: 80
+
+# Secrets
 secrets:
   enabled: false
+
+  posthog_project_api_key:
+    key: ""
