--- a/deploy/helm/posthog-reverse-proxy/templates/config_map.yaml
+++ b/deploy/helm/posthog-reverse-proxy/templates/config_map.yaml
@@ -1,10 +1,39 @@
-# This config map is included just to make the helm chart valid.
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-reverse-proxy
+  name: {{ .Release.Name }}-posthog-reverse-proxy-config
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "posthog-reverse-proxy.labels" . | nindent 4 }}
 data:
-  DUMMY: "DUMMY"
+  nginx.conf.template: |
+    events {}
+    http {
+
+      limit_req_zone $binary_remote_addr zone=one:10m rate=100r/s;
+
+      server {
+        listen {{ .Values.posthog.service.port }};
+        server_name {{ .Values.domain }};
+
+        location = /posthog/health {
+          return 200;
+        }
+
+        location = / {
+          if ($http_x_is_cleanlab_origin != "true") {
+            return 403;
+          }
+
+          limit_req zone=one burst=10 nodelay;
+
+          proxy_ssl_name "us.i.posthog.com";
+          proxy_ssl_server_name "on";
+
+          proxy_pass https://us.i.posthog.com;
+          proxy_set_header Authorization "Bearer $POSTHOG_PROJECT_API_KEY";
+          proxy_set_header X-Host us.i.posthog.com;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+        }
+      }
+    }
