--- a/deploy/helm/posthog-reverse-proxy/values.yaml
+++ b/deploy/helm/posthog-reverse-proxy/values.yaml
@@ -1,5 +1,16 @@
 environment: # development, staging, production
+domain: # e.g. ph.cleanlab.ai
 
+# Ingress
+ingress:
+  enabled: true
+
+# Posthog
+posthog:
+  service:
+    port: 80  
+
+# Secrets
 secrets:
   enabled: true
 
