--- a/deploy/helm/posthog-reverse-proxy/values/hosted/production.yaml
+++ b/deploy/helm/posthog-reverse-proxy/values/hosted/production.yaml
@@ -1,5 +1,19 @@
 environment: production
+domain: ph.cleanlab.ai
 
+# Ingress
+ingress:
+  enabled: true
+
+# Posthog
+posthog:
+  service:
+    type: NodePort
+    port: 80  
+
+# Secrets
 secrets:
+  enabled: true
+
   posthog_project_api_key:
     key: "production/control-plane/posthog-reverse-proxy/posthog_project_api_key"
