--- a/deploy/helm/billing/templates/billing-backend/reverse_proxy/ingress.yaml
+++ b/deploy/helm/billing/templates/billing-backend/reverse_proxy/ingress.yaml
@@ -2,14 +2,14 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: {{ .Release.Name }}-backend-reverse-proxy-ingress
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "billing.labels" . | nindent 4 }}
   annotations:
+    alb.ingress.kubernetes.io/group.name: {{ .Values.environment }}-billing
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
-    alb.ingress.kubernetes.io/healthcheck-path: /ingest/health
     alb.ingress.kubernetes.io/healthcheck-path: /api/health
     external-dns.alpha.kubernetes.io/hostname: {{ .Values.domain }}
 spec:
@@ -18,25 +18,11 @@ spec:
     - host: {{ .Values.domain }}
       http:
         paths:
-          - path: /ingest
-            pathType: Exact
-            backend: &metronome-reverse-proxy-backend
-              service:
-                name: {{ .Release.Name }}-metronome-reverse-proxy
-                port:
-                  number: {{ .Values.metronome.service.port }}
-          - path: /ingest/health
-            pathType: Exact
-            backend: *metronome-reverse-proxy-backend
-          
           - path: /api
             pathType: Prefix
-            backend: &backend-reverse-proxy-backend
+            backend:
               service:
                 name: {{ .Release.Name }}-backend-reverse-proxy
                 port:
                   number: {{ .Values.backend.service.port }}
-          - path: /api/health
-            pathType: Exact
-            backend: *backend-reverse-proxy-backend
 {{- end }}
