--- a/deploy/helm/billing/templates/billing-backend/reverse_proxy/service.yaml
+++ b/deploy/helm/billing/templates/billing-backend/reverse_proxy/service.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ .Release.Name }}-backend
+    app: {{ .Release.Name }}-backend-reverse-proxy
